# SimppleRefrigerationSystem

./: CMakeLists.txt  main.cpp
